--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -77,13 +77,23 @@
         <div id="page_container_gen" class="
           {% if route != 'lbf_admin_homepage' 
             and route != 'lbf_admin_currentOrders'
+            and route != 'lbf_admin_currentOrders_sorted'
             and route != 'lbf_admin_answer'
             and route != 'lbf_admin_delete'
             and route != 'lbf_admin_complete'
             and route != 'lbf_admin_pastOrders'
             and route != 'lbf_admin_users'
+            and route != 'lbf_admin_users_sorted'
+            and route != 'lbf_admin_edit_user'
+            and route != 'lbf_admin_usersEmails'
+            and route != 'lbf_admin_companies'
+            and route != 'lbf_admin_companies_sorted'
+            and route != 'lbf_admin_edit_company'
+            and route != 'lbf_admin_companiesEmails'
             and route != 'lbf_admin_newsletter'
+            and route != 'lbf_admin_emails_sorted'
             and route != 'lbf_admin_newsletterEmails'
+            and route != 'lbf_admin_edit_email'
             and route != 'lbf_admin_comments'
             and route != 'lbf_admin_comments_sorted'
             and route != 'lbf_admin_new_comment'
