--- a/src/LBF/AdminBundle/Resources/views/Admin/currentOrders.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/currentOrders.html.twig
@@ -44,22 +44,52 @@
 				                        <thead>
 				                          <tr>
 				                            <th class="center">
-				                              Ordre n°
+				                              	Ordre n°
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'id', 'order':'ASC'}) }}')" class="btn btn-action-admin">
+					                            	<span class="glyphicon glyphicon-triangle-top"></span>
+					                            </a>
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'id', 'order':'DESC'}) }}')" class="btn btn-action-admin">
+						                            <span class="glyphicon glyphicon-triangle-bottom"></span>
+					                            </a>
 				                            </th>
 				                            <th class="left">
-				                              Eléments
+				                              	Eléments
 				                            </th>
 				                            <th class="center">
-				                              Client
+				                              	Client
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'user', 'order':'ASC'}) }}')" class="btn btn-action-admin">
+					                            	<span class="glyphicon glyphicon-triangle-top"></span>
+					                            </a>
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'user', 'order':'DESC'}) }}')" class="btn btn-action-admin">
+						                            <span class="glyphicon glyphicon-triangle-bottom"></span>
+					                            </a>
 				                            </th>
 				                            <th class="center">
-				                              Créé le
+				                              	Créé le
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'createdAt', 'order':'ASC'}) }}')" class="btn btn-action-admin">
+					                            	<span class="glyphicon glyphicon-triangle-top"></span>
+					                            </a>
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'createdAt', 'order':'DESC'}) }}')" class="btn btn-action-admin">
+						                            <span class="glyphicon glyphicon-triangle-bottom"></span>
+					                            </a>
 				                            </th>
 				                            <th class="center">
-				                              Livraison le
+				                              	Livraison le
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'deliveryAt', 'order':'ASC'}) }}')" class="btn btn-action-admin">
+					                            	<span class="glyphicon glyphicon-triangle-top"></span>
+					                            </a>
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'deliveryAt', 'order':'DESC'}) }}')" class="btn btn-action-admin">
+						                            <span class="glyphicon glyphicon-triangle-bottom"></span>
+					                            </a>
 				                            </th>
 				                            <th class="center">
-				                              Statut
+				                              	Statut
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'status', 'order':'ASC'}) }}')" class="btn btn-action-admin">
+					                            	<span class="glyphicon glyphicon-triangle-top"></span>
+					                            </a>
+				                              	<a href="javascript:loadContentAdmin('{{ path('lbf_admin_currentOrders_sorted', {'sortBy':'status', 'order':'DESC'}) }}')" class="btn btn-action-admin">
+						                            <span class="glyphicon glyphicon-triangle-bottom"></span>
+					                            </a>
 				                            </th>
 				                            <th class="center">
 				                            	Action
@@ -134,7 +164,7 @@
 						                              		<span class="glyphicon black glyphicon-pencil" aria-hidden="true"></span>
 					                              		</button>
 					                              	</a>
-					                              	<a href="javascript:areYouSureDelete('{{ path('lbf_admin_delete', {'orderId':single_order.id}) }}')">
+					                              	<a href="javascript:areYouSureDeleteOrder('{{ path('lbf_admin_delete', {'orderId':single_order.id}) }}')">
 					                              		<button class="btn btn-action-admin">
 						                              		<span class="glyphicon black glyphicon-trash" aria-hidden="true"></span>
 					                              		</button>
