--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -1327,9 +1327,9 @@ body.modal-open {
 
 .btn-choice {
 	text-align: left;
-	width: 80%;
+	width: 100%;
 	height: 30px;
-	margin-left: 10%;
+	margin-left: 3px;
 	margin-top: 3px;
 	background-color: transparent;
 	padding: 6px 10px;
